[package]
name = "egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19"
egui-wgpu = "0.19"
egui-winit = "0.19"
env_logger = "0.9"
log = "0.4"
winit_input_helper = "0.13"
pollster = "0.2"
raw-window-handle = "0.4"